--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -4,6 +4,7 @@
       <img src="assets/images/logo.jpg" alt="logo" />
     </a>
     <nav>
+      <i class="fas fa-bars toggle-menu"></i>
       <ul>
         <li><a class="active">Home</a></li>
         <li><a>Home</a></li>
