--- a/src/app/pages/home/home.component.css
+++ b/src/app/pages/home/home.component.css
@@ -23,3 +23,10 @@
     width: 1170px;
   }
 }
+/* header */
+.nav-header{
+  position: absolute;
+  left: 0;
+  width: 100%;
+  background: black;
+}
