--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,6 +1,9 @@
 <div class="body">
   <div class="container">
-    <app-navbar></app-navbar>
+    <div class="nav-header">
+      <app-navbar></app-navbar>
+    </div>
+
 
   </div>
 
