--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,7 +1,7 @@
-<header>
+<header class="container">
   <div class="navbar">
     <a class="logo">
-      <img src="assets/images/logo.jpg" alt="logo" />
+      <img src="assets/images/logo.jpeg" alt="logo" />
     </a>
     <nav>
       <i class="fas fa-bars toggle-menu"></i>
