--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,10 +1,19 @@
 <div class="body">
-  <div class="container">
-    <div class="nav-header">
-      <app-navbar></app-navbar>
-    </div>
-
-
+  <div class="nav-header">
+    <app-navbar></app-navbar>
   </div>
-
+  <div class="landing">
+    <div class="overlay"></div>
+    <div class="text">
+      <div class="content">
+        <h2>Hello world</h2>
+        <p>
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatibus
+          nostrum libero tenetur beatae totam quas blanditiis molestiae,
+          expedita inventore, ipsa optio dolore nesciunt esse officia
+          exercitationem modi nihil quisquam quia?
+        </p>
+      </div>
+    </div>
+  </div>
 </div>
